# Seven

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jokerpeng/demo/seven/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jokerpeng/demo/seven/: MainActivity.java
app/src/main/java/com/jokerpeng/demo/seven/application/: SevenApplication.java
app/src/main/java/com/jokerpeng/demo/seven/base/: BaseAnswer.java  BaseBean.java  BaseKey.java
app/src/main/java/com/jokerpeng/demo/seven/bean/: AppBean.java  BaikeBean.java  CalcBean.java  ChatBean.java  CookbookBean.java  DateTimeBean.java  FAQBean.java  FlightBean.java  FlowerBean.java  GiftBean.java  HotelBean.java  MapBean.java  MessageBean.java  MusicBean.java  OpenQABean.java  PM25Bean.java  RadioBean.java  RestaurantBean.java  ScheduleBean.java  ShortRentBean.java  StockBean.java  TVBean.java  TelephoneBean.java  TrainBean.java  TranslationBean.java  VideoBean.java  WeatherBean.java  WebSearchBean.java  WebSiteBean.java  WeiboBean.java
app/src/main/java/com/jokerpeng/demo/seven/presenter/: DictationManager.java  SettingManager.java  SpeechManager.java  UnderstanderManager.java
app/src/main/java/com/jokerpeng/demo/seven/utils/: ACache.java  CommonJSONParser.java  CommonUtils.java  JsonParser.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/jokerpeng/demo/seven/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
